// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConstrainsView snapshots > should render ConstrainsView 1`] = `
<DocumentFragment>
  <div
    class="ConstrainsView"
  >
    <div
      class="ConstrainsView__constrain ConstrainsView__constrain--bottom"
    />
    <div
      class="ConstrainsView__constrain ConstrainsView__constrain--center-horizontal"
    />
    <div
      class="ConstrainsView__constrain ConstrainsView__constrain--center-vertical"
    />
    <div
      class="ConstrainsView__constrain ConstrainsView__constrain--left"
    />
    <div
      class="ConstrainsView__constrain ConstrainsView__constrain--right"
    />
    <div
      class="ConstrainsView__constrain ConstrainsView__constrain--top"
    />
  </div>
</DocumentFragment>
`;

exports[`ConstrainsView snapshots > should render selected 1`] = `
<DocumentFragment>
  <div
    class="ConstrainsView ConstrainsView--selected"
  >
    <div
      class="ConstrainsView__constrain ConstrainsView__constrain--bottom"
    />
    <div
      class="ConstrainsView__constrain ConstrainsView__constrain--center-horizontal"
    />
    <div
      class="ConstrainsView__constrain ConstrainsView__constrain--center-vertical"
    />
    <div
      class="ConstrainsView__constrain ConstrainsView__constrain--left"
    />
    <div
      class="ConstrainsView__constrain ConstrainsView__constrain--right"
    />
    <div
      class="ConstrainsView__constrain ConstrainsView__constrain--top"
    />
  </div>
</DocumentFragment>
`;

exports[`ConstrainsView snapshots > should render with alignment 1`] = `
<DocumentFragment>
  <div
    class="ConstrainsView ConstrainsView__horizontal--center ConstrainsView__vertical--center"
  >
    <div
      class="ConstrainsView__constrain ConstrainsView__constrain--bottom"
    />
    <div
      class="ConstrainsView__constrain ConstrainsView__constrain--center-horizontal"
    />
    <div
      class="ConstrainsView__constrain ConstrainsView__constrain--center-vertical"
    />
    <div
      class="ConstrainsView__constrain ConstrainsView__constrain--left"
    />
    <div
      class="ConstrainsView__constrain ConstrainsView__constrain--right"
    />
    <div
      class="ConstrainsView__constrain ConstrainsView__constrain--top"
    />
  </div>
</DocumentFragment>
`;
